--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <p id="apaitu?">
         <br />
         Spider-Man, adalah pahlawan super fiktif dari Marvel Comics yang diciptakan oleh penulis Stan Lee dan artis Steve Ditko. Ia pertama muncul dalam Amazing Fantasy #15. Ia telah menjadi salah satu pahlawan super yang paling terkenal di
-        dunia. <a href="https://id.wikipedia.org/wiki/Spider-Man">wikipedia</a>
+        dunia. <a href="https://id.wikipedia.org/wiki/Spider-Man" target="_blink">wikipedia</a>
         <p>
-          An image as a link: <a href="spider-MAN2.jpg">
+          An image as a link: <a href="spider-MAN2.jpg" target="_blink">
           <img border="0" alt="spider-MAN" src="" width="100" height="100">
           </a>
           </p>
