memodifikasi website dengan menambahkan foter

--- a/index.html
+++ b/index.html
@@ -75,5 +75,13 @@
       <br />
       <input type="submit" id="submit" />
     </div>
+    <div class="footers">
+      <p>
+        <a href="https://fsjson.github.io/Home/">Home</a> | <a href="https://fsjson.github.io/What-s-Spider-MAN-/#">Gallery</a> | <a href="#">About</a> | <a href="#">Contact</a>
+      </p><br>
+      <p>
+        Dibuat dengan cinta oleh Abdul Jamal 2022.
+      </p>
+    </div>
   </body>
 </html>
